Migrating to IntelliJ.