@@ -1,74 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="MSci_Project_Code" default="default" basedir=".">
-    <description>Builds, tests, and runs the project MSci Project Code.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<project name="MinorityGame" default="build" basedir=".">
+    <description>Builds and packages the MinorityGame library.</description>
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+    <property name="src" location="src" />
+    <property name="dist" location="dist" />
+    <property name="build" location="build" />
+    <property name="vendor" location="vendor" />
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
+    <path id="build.classpath">
+        <fileset dir="${vendor}" includes="**/lib/*.jar"/>
+    </path>
 
-    (Targets beginning with '-' are not intended to be called on their own.)
+    <target name="init.build" description="Initialise for build.">
+        <mkdir dir="${build}" />
+    </target>
 
-    Example of inserting an obfuscator after compilation could look like this:
+    <target name="init.dist" description="Initialise for distribution.">
+        <mkdir dir="${dist}" />
+    </target>
 
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
+    <target name="clean" description="Remove all build artifacts.">
+        <delete dir="${build}" />
+        <delete dir="${dist}" />
+    </target>
 
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
+    <target name="jar" depends="compile" description="Create a jar containing the core library.">
+        <mkdir dir="${dist}/lib" />
+        <copy todir="${dist}/lib" flatten="true">
+            <path refid="build.classpath" />
+        </copy>
+        <jar jarfile="${dist}/lib/minority-game.jar" basedir="${build}">
+            <manifest>
+                <attribute name="Main-Class" value="msci.ChoiceAttendance"/>
+            </manifest>
+        </jar>
+    </target>
 
+    <target name="compile" depends="init.build" description="Compiles all project classes. ">
+        <javac srcdir="${src}"
+               destdir="${build}"
+               classpathref="build.classpath"
+               includeantruntime="false"/>
+    </target>
 
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
+    <target name="javadoc" description="Generate javadoc documentation.">
+        <mkdir dir="${dist}/doc" />
+        <javadoc sourcepath="${src}"
+                 destdir="${dist}/doc"
+                 defaultexcludes="true"
+                 use="true"
+                 classpathref="build.classpath" />
+    </target>
 
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar-with-manifest:    JAR building (if you are using a manifest)
-      -do-jar-without-manifest: JAR building (if you are not using a manifest)
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
+    <target name="execute" description="Run a minority game simulation.">
+        <java jar="${dist}/lib/minority-game.jar" fork="true">
+            <jvmarg value="-Djava.ext.dirs=${dist}/lib"/>
+        </java>
+    </target>
 
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="MSci_Project_Code-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+    <target name="build" depends="clean, compile, dist" description="Build, jar and generate documentation." />
+    <target name="dist" depends="init.dist, jar, javadoc" />
 </project>
